# vogent-turn

./: .gitignore  LICENSE  README.md  UV_GUIDE.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  basic_usage.py  batch_processing.py  request_batcher.py
vogent_turn/: __init__.py  inference.py  predict.py  smollm_whisper.py  whisper.py
