[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vogent-turn"
version = "0.1.0"
description = "Lightweight turn detection library for conversational AI"
readme = "README.md"
requires-python = "==3.10.*"
license = { text = "Apache-2.0" }
authors = [
    { name = "Vogent" }
]
keywords = ["turn-detection", "conversation-ai", "voice", "speech", "multimodal", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.26.0,<2.0",
    "huggingface-hub>=0.19.0",
    "soundfile>=0.12.0",
    "resampy>=0.4.2",
    "cffi>=1.15.0",
    "librosa==0.10.1",
    "onnx==1.18.0",
    "onnxruntime>=1.22.1; (platform_system != 'Linux' and platform_system != 'Windows') or platform_machine != 'x86_64'",
    "onnxruntime-gpu==1.22.*; (platform_system == \"Linux\" or platform_system == \"Windows\") and platform_machine == \"x86_64\"",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers==4.53.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vogent/vogent-turn"
Repository = "https://github.com/vogent/vogent-turn"
Issues = "https://github.com/vogent/vogent-turn/issues"

[project.scripts]
vogent-turn-predict = "vogent_turn.predict:main"

[tool.hatchling.build.targets.wheel]
packages = ["vogent_turn"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

